--- a/intro2.html
+++ b/intro2.html
@@ -9,25 +9,25 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="favicon2.png">
     <!-- Bootstrap core CSS-->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- fontawesome-->
-    <link href="../vendor/fontawesome/css/all.css" rel="stylesheet">
+    <link href="./vendor/fontawesome/css/all.css" rel="stylesheet">
     <!-- Custom layout styles for this template-->
-    <link href="../css/layout.css" rel="stylesheet">
+    <link href="./css/layout.css" rel="stylesheet">
     <!-- Custom layout styles for this template-->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <!-- Bootstrap core JavaScript-->
-    <script src="../vendor/jquery/jquery.min.js" type="text/javascript"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script src="./vendor/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="./vendor/bootstrap/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <!-- Chart.js-->
-    <script src="../js/chart/Chart.js" type="text/javascript"></script>
-    <script src="../js/chart/chartjs-plugin-datalabels.js" type="text/javascript"></script>
-    <script src="../js/chart/chartjs-plugin-piechart-outlabels.js" type="text/javascript"></script>
-    <script src="../js/chart/chartjs-plugin-annotation.js" type="text/javascript"></script>
-    <script src="../js/chart/defaultChart.js" type="text/javascript"></script>
+    <script src="./js/chart/Chart.js" type="text/javascript"></script>
+    <script src="./js/chart/chartjs-plugin-datalabels.js" type="text/javascript"></script>
+    <script src="./js/chart/chartjs-plugin-piechart-outlabels.js" type="text/javascript"></script>
+    <script src="./js/chart/chartjs-plugin-annotation.js" type="text/javascript"></script>
+    <script src="./js/chart/defaultChart.js" type="text/javascript"></script>
     <!-- Custom script for this template-->
-    <script src="../js/ui.js" type="text/javascript"></script>
-    <script src="../js/responsiveCSS.js" type="text/javascript"></script>
+    <script src="./js/ui.js" type="text/javascript"></script>
+    <script src="./js/responsiveCSS.js" type="text/javascript"></script>
   </head>
   <body><a class="blind" href="#content">본문 바로가기</a>
     <div class="image-button-wrap"><a class="image-button" id="lacals" href="main.html"><img src="images/cardButton1.jpeg" alt="LaCalS">
