--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
   <body><a class="blind" href="#content">본문 바로가기</a>
     <!-- Navigation (bootstrap) https://mpyc.kr/kr/-->
     <nav class="navbar navbar-light navbar-expand-lg fixed-top">
-      <div class="container-fluid"><a class="navbar-brand" href="#"><img src="../images/logo.png" alt="로고"></a>
+      <div class="container-fluid"><a class="navbar-brand" href="#"><img src="./images/logo.png" alt="로고"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
@@ -50,7 +50,7 @@
         <div class="navbar-nav ml-auto"><a class="nav-link" href="#"><i class="fab fa-instagram"></i></a><a class="nav-link" href="#"><i class="fab fa-youtube"></i></a></div>
       </div>
     </nav>
-    <div class="main-banner"><img class="main-banner-image" src="../images/jumbotron4.jpeg" alt="banner">
+    <div class="main-banner"><img class="main-banner-image" src="./images/jumbotron4.jpeg" alt="banner">
       <div class="main-banner-text">
         <h1>LaCals</h1>
         <p>LAMA GLOCAL STAGE</p>
