--- a/main.html
+++ b/main.html
@@ -127,7 +127,7 @@
     </section>
     <footer class="footer"> 
       <div class="container"> 
-        <div class="footerLogo"> <img src="../images/logo.png" alt="로고"></div>
+        <div class="footerLogo"> <img src="./images/logo.png" alt="로고"></div>
         <div class="footerAddress"> 
           <p>
              Copyright&copy; LaCals. All rights reserved.<br>서울특별시 강남구 선릉로8길 9 1층</p>
