--- a/location.html
+++ b/location.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <title>LaCalS</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="favicon2.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <!-- Bootstrap core CSS-->
     <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- fontawesome-->
@@ -19,100 +19,75 @@
     <!-- Bootstrap core JavaScript-->
     <script src="./vendor/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="./vendor/bootstrap/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-    <!-- Chart.js-->
-    <script src="./js/chart/Chart.js" type="text/javascript"></script>
-    <script src="./js/chart/chartjs-plugin-datalabels.js" type="text/javascript"></script>
-    <script src="./js/chart/chartjs-plugin-piechart-outlabels.js" type="text/javascript"></script>
-    <script src="./js/chart/chartjs-plugin-annotation.js" type="text/javascript"></script>
-    <script src="./js/chart/defaultChart.js" type="text/javascript"></script>
     <!-- Custom script for this template-->
     <script src="./js/ui.js" type="text/javascript"></script>
     <script src="./js/responsiveCSS.js" type="text/javascript"></script>
   </head>
-  <body><a class="blind" href="#content">본문 바로가기</a>
-    <!-- Navigation Q. https://mpyc.kr/kr/ 및 메뉴명-->
+  <body><a class="sr-only sr-only-focusable" id="skipAccesibility" href="#content">본문 바로가기</a>
+    <!-- Navigation-->
     <nav class="gnb navbar navbar-light navbar-expand-md fixed-top" id="gnb">
-      <div class="container-fluid"><a class="gnbLogo navbar-brand" href="#"><img src="./images/logo.png" alt="로고"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#gnbInner" aria-controls="gnbInner" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="container-fluid"><a class="gnbLogo navbar-brand" href="main.html"><img src="./images/logo.png" alt="로고"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#gnbInner" aria-controls="gnbInner" aria-expanded="false" aria-label="menu toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="gnbInner collapse navbar-collapse" id="gnbInner">
           <ul class="gnbMenu navbar-nav" id="gnbMenu">
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="dropdown1" href="whatwedo.html" data-toggle="dropdown" aria-expanded="false">LaCals</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="dropdown1" href="#" data-toggle="dropdown" aria-expanded="false">LaCalS</a>
               <div class="dropdown-menu" aria-labelledby="dropdown1"><a class="dropdown-item" href="whatwedo.html">What We Do</a><a class="dropdown-item" href="whoweare.html">Who We Are</a></div>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="dropdown2" href="regular.html" data-toggle="dropdown" aria-expanded="false">Signatures</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="dropdown2" href="#" data-toggle="dropdown" aria-expanded="false">Signatures</a>
               <div class="dropdown-menu" aria-labelledby="dropdown2"><a class="dropdown-item" href="regular.html">Regular</a><a class="dropdown-item" href="theme.html">Theme</a></div>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="dropdown3" href="moreinformation.html" data-toggle="dropdown" aria-expanded="false">Contact Us</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown3"><a class="dropdown-item" href="moreinformation.html">More Information</a><a class="dropdown-item" href="location.html">Location</a></div>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="dropdown3" href="#" data-toggle="dropdown" aria-expanded="false">Contact Us</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown3"><a class="dropdown-item" href="location.html">Location</a></div>
             </li>
           </ul>
         </div>
-        <ul class="gnbSub navbar-nav" id="gnbSub">
-          <li class="nav-item"> <a class="nav-link" href="https://www.facebook.com/" target="_blank"><i class="iconFacebook fab fa-facebook-square"></i></a></li>
+        <ul class="gnbSub navbar-nav d-none d-md-flex" id="gnbSub">
+          <li class="nav-item"> <a class="nav-link" href="https://www.facebook.com/" target="_blank"><i class="iconYoutube fab fa-youtube-square"></i></a></li>
           <li class="nav-item"> <a class="nav-link" href="https://www.instagram.com/" target="_blank"><i class="iconInstagram fab fa-instagram-square"></i></a></li>
         </ul>
       </div>
     </nav>
     <section class="jumbotron jumbotronBg1"> 
       <div class="container">
-        <p class="jumbotronLead">LaCalS</p>
+        <p class="jumbotronLead">Contact Us</p>
       </div>
     </section>
-    <section> 
-      <div id="wrapper" style="max-width:;">
-        <div id="content">
-          <div class="location">
-            <div class="locationTitle">Location<span>
-                 9 Seolleung-ro 8-gil, Gangnam District, Seoul</span></div>
-            <div class="locationContent"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.054821341751!2d127.0589398765892!3d37.483032672060304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca710a5426d83%3A0x26563573626f9974!2sLAMA%20GLOCAL%20STAGE(LaCalS)!5e0!3m2!1sen!2skr!4v1727326365991!5m2!1sen!2skr" width="100%" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-          </div>
-          <div class="getInTouch"> 
-            <div class="getInTouchTitle">Get in Touch<span>
-                 If you have any questions or need further information, we’re here to help!<br>Feel free to reach out through your preferred platform, and we'll be happy to assist!</span></div>
-            <div class="getInTouchContent"><a href="https://www.instagram.com/" target="_blank"><i class="iconYoutube fa fa-comment"></i></a><a href="https://www.instagram.com/" target="_blank"><i class="iconInstagram fab fa-instagram-square"></i></a><a href="https://www.facebook.com/" target="_blank"><i class="iconYoutube fab fa-youtube-square"></i></a></div>
-          </div>
+    <section class="container-fluid" id="content">
+      <div class="location">
+        <div class="title">Location<span>
+             서울특별시 강남구 선릉로 8길 9, 1층<br>1st FL, 9 Seolleung-ro 8-gil, Gangnam District, Seoul</span>
+          <div class="locationImg"><img src="./images/location.png"></div>
         </div>
+        <div class="detail"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.054821341751!2d127.0589398765892!3d37.483032672060304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca710a5426d83%3A0x26563573626f9974!2sLAMA%20GLOCAL%20STAGE(LaCalS)!5e0!3m2!1sen!2skr!4v1727326365991!5m2!1sen!2skr" width="100%" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
       </div>
+      <div class="contactInfo">
+        <div class="title">Contact Info<span>
+             If you have any questions or need further information, we’re here to help!<br>Feel free to reach out through your preferred platform, and we'll be happy to assist!</span></div>
+        <div class="detail"><a href="https://pf.kakao.com/_dIcGG/chat" target="_blank"><i class="iconKakao fa fa-comment"></i></a><a href="https://www.instagram.com/lamaglocalstage/" target="_blank"><i class="iconInstagram fab fa-instagram-square"></i></a><a href="https://www.youtube.com/" target="_blank"><i class="iconYoutube fab fa-youtube-square"></i></a></div>
+      </div>
+      <style>
+        .location {padding:6rem 0 6rem 0; display: flex; margin-bottom: 4.8rem;}
+        .location .title {width: 45%; font-size: 4rem; font-weight: 800; color: #333; text-align: left; margin-bottom:0;}
+        .location .title span {margin-top: 0.8rem; display: block; font-size: 1.8rem; font-weight: 300; line-height: 125%; color :#6e6e73;}
+        .location .detail {width: 55%; text-align: right;}
+        .locationImg {max-width:480px; margin-top: 48px; width: 100%; border-radius:25px; overflow: hidden;}
+        .locationImg img {vertical-align: top; max-width: 100%; transform:scale(1.1);}
+        
+        .contactInfo {padding:0 0 4rem 0; display: flex; flex-wrap: wrap; justify-content: space-between; margin-bottom: 4.8rem;}
+        .contactInfo .title {width: 65%; position: relative; font-size: 4rem; font-weight: 800; color:#333; text-align: left; margin: 0;}
+        .contactInfo .title span {margin-top: 0.8rem; display: block; font-size: 1.8rem; font-weight: 300; line-height: 125%; color: #6e6e73;}
+        .contactInfo .title:after {content:''; position: absolute; width:1px; height:calc(100%); right:0; top:0; background-color: #6e6e73; }
+        .contactInfo .detail {width: 35%; min-width: 300px; display: flex; justify-content: center; align-items: center; gap: 2rem;}
+        .contactInfo .detail a {display: flex; justify-content: center; align-items: center; width: 8rem; height: 8rem; border-radius: 50%; background-color:#f5f5f7;}
+        .contactInfo .detail i {font-size: 4rem; color:#333;}
+      </style>
     </section>
-    <style></style>
     <footer class="footer"> 
       <div class="container-fluid footerInner"> 
-        <p class="footerLogo">LacalS</p>
+        <p class="footerLogo">LaCalS</p>
         <p class="footerAddress">서울특별시 강남구 선릉로8길 9 1층</p>
         <p class="footerRight">Copyright&copy; LaCalS. All rights reserved.</p>
       </div>
     </footer>
   </body>
 </html>
-<style>
-  .navbar {
-  font-size: 22px;
-  color:#333;
-  transition: background-color 0.3s ease;
-  }
-  
-  .navbar-nav .nav-item {
-      margin-right: 20px; /* Adjust the right margin */
-      margin-left: 20px; /* Adjust the left margin */
-  }
-  .navbar-nav .nav-link {color:#333;}
-  .navbar-nav .nav-link i {font-size:33px; margin-left: 10px;}
-  #navbarNav .navbar-nav a {font-size:24px; color:#333;}
-  .dropdown-menu {font-size:22px;}
-  .navbar.scrolled {
-  background-color: rgba(256, 256, 256, 0.9) !important;
-  }
-</style>
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-  var navbar = document.querySelector('.navbar');
-  
-  window.addEventListener('scroll', function() {
-      if (window.scrollY > 50) {
-      navbar.classList.add('scrolled');
-      } else {
-      navbar.classList.remove('scrolled');
-      }
-  });
-  });
-</script>
