--- a/intro.html
+++ b/intro.html
@@ -25,7 +25,7 @@
   </head>
   <body><a class="sr-only sr-only-focusable" id="skipAccesibility" href="#content">본문 바로가기</a>
     <!--아무것도 없음-->
-    <section class="intro"><a class="introButton" href="whatWeDo.html"><img src="./images/cardButton1.png" alt="LaCalS">
+    <section class="intro"><a class="introButton" href="whatwedo.html"><img src="./images/cardButton1.png" alt="LaCalS">
         <div class="introButtonOverlay">LaCalS <i class="fas fa-arrow-right introButtonArrow"></i></div></a><a class="introButton" href="regular.html"><img src="./images/tempImage8.jpeg" alt="Signatures">
         <div class="introButtonOverlay">Signatures <i class="fas fa-arrow-right introButtonArrow"></i></div></a><a class="introButton" href="location.html"><img src="./images/cardButton2.png" alt="Contact Us">
         <div class="introButtonOverlay">Contact Us <i class="fas fa-arrow-right introButtonArrow"></i></div></a></section>
